--- a/frontend/javascripts/app/views/settings/v2/manage-user-panel.html
+++ b/frontend/javascripts/app/views/settings/v2/manage-user-panel.html
@@ -15,7 +15,7 @@
     <h5 class="CX5-M sub-title mb-10">User Details</h5>
     <span class="CX5" ng-if="!current_user">Please select a user</span>
     <form ng-if="current_user">
-      <div class="setting-switch mb-15">
+      <div class="sm-switch mb-15">
         <switch class="switch" ng-model="current_user.is_admin"></switch>
         <label class="CX5-M">Admin Access</label>
       </div>
