--- a/frontend/stylesheets/chai-template/fonts.scss
+++ b/frontend/stylesheets/chai-template/fonts.scss
@@ -113,6 +113,18 @@
     line-height: 15px;
   }
 
+  .CB4{
+    font-family: 'DINOT--Regular', Arial, sans-serif;
+    font-size: 15px;
+    line-height: 18px;
+  }
+
+  .CB4-M{
+    font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 15px;
+    line-height: 18px;
+  }
+
   .CL1{
     font-family: 'DINOT--Medium', Arial, sans-serif;
     font-size: 14px;
