--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -982,8 +982,21 @@
 
       &.simple-mode-table{
         tr{
+          &.selected{
+            cursor: initial;
+          }
+
           td.target-cell{
             padding: 5px 3px;
+
+            &.assigned{
+              cursor: pointer;
+              &.omitted{
+                cursor: initial;
+                color: #C5C5C5;
+              }
+            }
+
             & > span{
               padding: 2px 7px;
               border-radius: 2px;
@@ -995,11 +1008,12 @@
             td{
               background: #D6F5FF;
               color: #000;
-              &.target-cell{
+              &.target-cell.assigned{
                 padding: 4px 3px;
                 & > span{
                   background: #fff;
                   border: 1px solid transparent;
+                  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
                 }
               }
             }
