fixed width for target cq

--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -1001,6 +1001,8 @@
               padding: 2px 7px;
               border-radius: 2px;
               border: 0px solid transparent;
+              width: 70px;
+              text-align: center;
             }
           }
 
